// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test en GifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="HunterxHunter"
      key="HunterxHunter"
    />
    <GifGrid
      category="Full Metal Alchemist"
      key="Full Metal Alchemist"
    />
  </ol>
</Fragment>
`;

exports[`Test en GifExpertApp Debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
